Fix(horizontal-scroll): Modify the widht of the navbar to fix horizontal scroll

--- a/css/style.css
+++ b/css/style.css
@@ -20,7 +20,7 @@ body {
 */
 
 #header {
-    width: 100%;
+    width: 99.9%;
     height: 70px;
     background-color: #e70012;
     position: sticky;
